[package]
name = "nested-value"
version = "0.0.2"
edition = "2021"

[dependencies]
log = "^0.4"
env_logger = "^0.11"

chrono = "0.4"

indexmap = "^2.2"

testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.1" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.1.1" }
